Make survival demo table

--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -22,30 +22,362 @@
    "id": "5833bb5f",
    "metadata": {},
    "source": [
-    "For this exercise you will analyze survival patterns on the Titanic by looking at passenger class, sex, and age group. Name the function `survival_demographics()`.\n",
+    "For this exercise you will analyze survival patterns on the Titanic by looking at passenger class, sex, and age group. Name the function survival_demographics().\n",
     "\n",
-    "1. Create a new column in the Titanic dataset that classifies passengers into age categories (i.e., a pandas `category` series). The categories should be:\n",
-    "    - Child (up to 12)\n",
-    "    - Teen (13–19)\n",
-    "    - Adult (20–59)\n",
-    "    - Senior (60+)  \n",
-    "  \n",
-    "\tHint: The `pd.cut()` function might come in handy here.\n",
+    "1. Create a new column in the Titanic dataset that classifies passengers into age categories (i.e., a pandas category series). The categories should be:\n",
     "\n",
-    "2. Group the passengers by class, sex, and age group.  \n",
+    "        Child (up to 12)\n",
+    "        Teen (13–19)\n",
+    "        Adult (20–59)\n",
+    "        Senior (60+)\n",
+    "Hint: The pd.cut() function might come in handy here.\n",
     "\n",
-    "3. For each group, calculate:  \n",
-    "    - The total number of passengers, `n_passengers`\n",
-    "    - The number of survivors, `n_survivors`\n",
-    "    - The survival rate, `survival_rate`\n",
+    "2. Group the passengers by class, sex, and age group.\n",
     "\n",
-    "4. Return a table that includes the results for *all* combinations of class, sex, and age group.  \n",
+    "3. For each group, calculate:\n",
     "\n",
-    "5. Order the results so they are easy to interpret.  \n",
+    "        The total number of passengers, n_passengers\n",
+    "        The number of survivors, n_survivors\n",
+    "        The survival rate, survival_rate\n",
+    "4. Return a table that includes the results for all combinations of class, sex, and age group.\n",
     "\n",
-    "6. Come up with a clear question that your results table makes you curious about (e.g., “Did women in first class have a higher survival rate than men in other classes?”). Write this question in your `app.py` file above the call to your visualization function, using `st.write(\"Your Question Here\")`.\n",
-    "   \n",
-    "7. Create a Plotly visualization in a function named `visualize_demographic()` that directly addresses your question by returning a Plotly figure (e.g., `fig = px. ...`). You are free to choose the chart type that you think best communicates the findings. Be creative — try different approaches, compare them, and ensure that your chart clearly answers the question you posed.\n"
+    "5. Order the results so they are easy to interpret.\n",
+    "\n",
+    "6. Come up with a clear question that your results table makes you curious about (e.g., “Did women in first class have a higher survival rate than men in other classes?”). Write this question in your app.py file above the call to your visualization function, using st.write(\"Your Question Here\").\n",
+    "\n",
+    "7. Create a Plotly visualization in a function named visualize_demographic() that directly addresses your question by returning a Plotly figure (e.g., fig = px. ...). You are free to choose the chart type that you think best communicates the findings. Be creative — try different approaches, compare them, and ensure that your chart clearly answers the question you posed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8557c676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1028/2044512281.py:20: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  grouped = df.groupby(['Pclass', 'Sex', 'age_group']).agg(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>n_passengers</th>\n",
+       "      <th>n_survivors</th>\n",
+       "      <th>survival_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>68</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0.971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>80</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0.425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>58</td>\n",
+       "      <td>52</td>\n",
+       "      <td>0.897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>76</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>23</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>22</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>56</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0.393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Child</td>\n",
+       "      <td>25</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Teen</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>186</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0.140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Pclass     Sex age_group  n_passengers  n_survivors  survival_rate\n",
+       "0        1  female     Child             1            0          0.000\n",
+       "1        1  female      Teen            13           13          1.000\n",
+       "2        1  female     Adult            68           66          0.971\n",
+       "3        1  female    Senior             3            3          1.000\n",
+       "4        1    male     Child             3            3          1.000\n",
+       "5        1    male      Teen             4            1          0.250\n",
+       "6        1    male     Adult            80           34          0.425\n",
+       "7        1    male    Senior            14            2          0.143\n",
+       "8        2  female     Child             8            8          1.000\n",
+       "9        2  female      Teen             8            8          1.000\n",
+       "10       2  female     Adult            58           52          0.897\n",
+       "11       2  female    Senior             0            0            NaN\n",
+       "12       2    male     Child             9            9          1.000\n",
+       "13       2    male      Teen            10            1          0.100\n",
+       "14       2    male     Adult            76            4          0.053\n",
+       "15       2    male    Senior             4            1          0.250\n",
+       "16       3  female     Child            23           11          0.478\n",
+       "17       3  female      Teen            22           13          0.591\n",
+       "18       3  female     Adult            56           22          0.393\n",
+       "19       3  female    Senior             1            1          1.000\n",
+       "20       3    male     Child            25            9          0.360\n",
+       "21       3    male      Teen            38            3          0.079\n",
+       "22       3    male     Adult           186           26          0.140\n",
+       "23       3    male    Senior             4            0          0.000"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import streamlit as st\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# Load Titanic dataset\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/leontoddjohnson/datasets/main/data/titanic.csv')\n",
+    "\n",
+    "def survival_demographics():\n",
+    "    \"\"\"\n",
+    "    Analyze survival patterns by passenger class, sex, and age group.\n",
+    "    Returns a DataFrame with passenger counts, survivor counts, and survival rates.\n",
+    "    \"\"\"\n",
+    "    # Create age categories using pd.cut()\n",
+    "    bins = [0, 12, 19, 59, 100]\n",
+    "    labels = ['Child', 'Teen', 'Adult', 'Senior']\n",
+    "    df['age_group'] = pd.cut(df['Age'], bins=bins, labels=labels, right=True)\n",
+    "    \n",
+    "    # Group by class, sex, and age group\n",
+    "    grouped = df.groupby(['Pclass', 'Sex', 'age_group']).agg(\n",
+    "        n_passengers=('PassengerId', 'count'),\n",
+    "        n_survivors=('Survived', 'sum')\n",
+    "    ).reset_index()\n",
+    "    \n",
+    "    # Calculate survival rate\n",
+    "    grouped['survival_rate'] = (grouped['n_survivors'] / grouped['n_passengers']).round(3)\n",
+    "    \n",
+    "    # Order results for easy interpretation\n",
+    "    grouped = grouped.sort_values(['Pclass', 'Sex', 'age_group'])\n",
+    "    \n",
+    "    return grouped\n",
+    "survival_demographics()\n"
    ]
   },
   {
@@ -92,12 +424,6 @@
     "\n",
     "Once you’ve created this column, consider how this age division relates to your analysis above. Try to visualize this analysis in Plotly using the function name `visualize_age_division()`."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "496069f5",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -116,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
